--- a/src/Dashboard.ipynb
+++ b/src/Dashboard.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b779d7b9d4047f2b518bfbc5214c11d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FloatText(value=0.6729, description='Spannung:', disabled=True, style=Descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importieren der benötigten Bibliotheken\n",
     "import ipywidgets as widgets\n",
@@ -78,7 +63,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv_linux",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
