Funktionsgenerator.ipynb neu hinzufügen, Visualisierung für Temperatur löschen

--- a/src/Dashboard.ipynb
+++ b/src/Dashboard.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37d447dfa77341a7827b3e29dcc93a61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FloatText(value=0.6328, description='Spannung:', disabled=True, style=Descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Importieren der benötigten Bibliotheken\n",
     "import ipywidgets as widgets\n",
@@ -30,20 +45,12 @@
     "    style={'description_width': 'initial'}\n",
     ")\n",
     "\n",
-    "temperatur_anzeige = widgets.FloatText(\n",
-    "    value=0.0,\n",
-    "    description='Temperatur:',\n",
-    "    disabled=True,\n",
-    "    style={'description_width': 'initial'}\n",
-    ")\n",
-    "\n",
     "# Funktion zur kontinuierlichen Aktualisierung\n",
     "def update_value():\n",
     "    while True:\n",
     "        daten = generator.generiere_messdaten()\n",
     "        spannung_anzeige.value = daten['spannung']\n",
     "        strom_anzeige.value = daten['strom']\n",
-    "        temperatur_anzeige.value = daten['temperatur']\n",
     "        time.sleep(0.1)  # Aktualisierung alle 0.1 Sekunden\n",
     "\n",
     "# Starten des Update-Threads\n",
@@ -56,14 +63,13 @@
     "display(widgets.VBox([\n",
     "    widgets.HBox([spannung_anzeige, widgets.Label('V')]),\n",
     "    widgets.HBox([strom_anzeige, widgets.Label('A')]),\n",
-    "    widgets.HBox([temperatur_anzeige, widgets.Label('°C')])\n",
     "]))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_linux",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
