Refactor Diodenkennlinie code: Remove legacy Python script and update Jupyter notebooks to use lgpio for GPIO control instead of RPi.GPIO. Enhance documentation and improve measurement procedures in the notebooks.

--- a/src/Test/Diodenkennlinie.ipynb
+++ b/src/Test/Diodenkennlinie.ipynb
@@ -49,7 +49,7 @@
     "from __future__ import print_function  # Python 2/3 Kompatibilität\n",
     "import spidev                          # SPI-Kommunikation mit DAC\n",
     "import time                           # Wartezeiten\n",
-    "import RPi.GPIO as GPIO               # GPIO-Steuerung für Chip Select\n",
+    "import lgpio                          # GPIO-Steuerung für Chip Select\n",
     "import matplotlib.pyplot as plt       # Diagramme erstellen\n",
     "\n",
     "from daqhats import mcc118, OptionFlags, HatIDs    # MCC118 Hardware-Bibliothek\n",
@@ -120,9 +120,9 @@
     "spi.mode = 0b00             # SPI Mode 0 (CPOL=0, CPHA=0)\n",
     "\n",
     "# === GPIO für Chip Select ===\n",
-    "GPIO.setmode(GPIO.BCM)      # BCM Pin-Nummerierung\n",
-    "GPIO.setup(CS_PIN, GPIO.OUT)\n",
-    "GPIO.output(CS_PIN, GPIO.HIGH)  # CS initial auf HIGH (inaktiv)"
+    "gpio_handle = lgpio.gpiochip_open(0)  # Öffnet GPIO-Chip 0\n",
+    "lgpio.gpio_claim_output(gpio_handle, CS_PIN, lgpio.SET_PULL_UP)  # CS-Pin als Ausgang mit Pull-Up\n",
+    "lgpio.gpio_write(gpio_handle, CS_PIN, 1)  # CS initial auf HIGH (inaktiv)"
    ]
   },
   {
@@ -188,9 +188,9 @@
     "    print(f\"DAC: {value:4d} → {spannung:.3f}V | SPI: 0x{high_byte:02X}{low_byte:02X}\")\n",
     "    \n",
     "    # === SPI-Übertragung ===\n",
-    "    GPIO.output(CS_PIN, GPIO.LOW)     # Chip Select aktivieren\n",
-    "    spi.xfer2([high_byte, low_byte])  # 16-Bit Daten senden\n",
-    "    GPIO.output(CS_PIN, GPIO.HIGH)    # Chip Select deaktivieren"
+    "    lgpio.gpio_write(gpio_handle, CS_PIN, 0)  # Chip Select aktivieren\n",
+    "    spi.xfer2([high_byte, low_byte])          # 16-Bit Daten senden\n",
+    "    lgpio.gpio_write(gpio_handle, CS_PIN, 1)  # Chip Select deaktivieren"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "        # === Cleanup (immer ausführen!) ===\n",
     "        try:\n",
     "            write_dac(0)    # DAC auf 0V setzen\n",
-    "            GPIO.cleanup()  # GPIO zurücksetzen\n",
+    "            lgpio.gpiochip_close(gpio_handle)  # GPIO zurücksetzen\n",
     "            print(\"🧹 Hardware-Cleanup abgeschlossen.\")\n",
     "        except:\n",
     "            pass\n",
@@ -506,9 +506,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "def analyze_diode_curve(voltages, currents):\n",
     "    \"\"\"\n",
     "    Erweiterte Analyse der Diodenkennlinie\n",
