Aktualisiere Diodenkennlinie.ipynb: Korrigiere maximale DAC-Ausgangsspannung auf 10,5V, verbessere GPIO-Initialisierung und Fehlerbehandlung, füge Cleanup-Funktion hinzu und optimiere Messablauf.

--- a/src/Test/Diodenkennlinie.ipynb
+++ b/src/Test/Diodenkennlinie.ipynb
@@ -64,7 +64,7 @@
     "## Schritt 2: DAC-Parameter definieren\n",
     "\n",
     "### Was ist ein DAC?\n",
-    "Ein **DAC (Digital-Analog-Converter)** wandelt digitale Werte in analoge Spannungen um. Unser DAC hat eine **12-Bit Auflösung** (4096 Stufen) und kann Spannungen bis **10,7V** erzeugen.\n",
+    "Ein **DAC (Digital-Analog-Converter)** wandelt digitale Werte in analoge Spannungen um. Unser DAC hat eine **12-Bit Auflösung** (4096 Stufen) und kann Spannungen bis **10,5V** erzeugen.\n",
     "\n",
     "### Hardware-Parameter:\n"
    ]
@@ -79,10 +79,10 @@
     "# === DAC Hardware-Parameter ===\n",
     "CS_PIN = 22              # GPIO Pin für Chip Select (SPI)\n",
     "MAX_DAC_VALUE = 4095     # Maximum DAC-Wert (12-Bit: 2^12 - 1)\n",
-    "MAX_SPANNUNG = 10.7      # Maximale Ausgangsspannung in Volt\n",
+    "MAX_SPANNUNG = 10.5      # Maximale Ausgangsspannung in Volt\n",
     "\n",
     "# Auflösung berechnen\n",
-    "SPANNUNG_PRO_BIT = MAX_SPANNUNG / MAX_DAC_VALUE  # ≈ 2.61 mV pro Bit"
+    "SPANNUNG_PRO_BIT = MAX_SPANNUNG / MAX_DAC_VALUE  # ≈ 2.56 mV pro Bit"
    ]
   },
   {
@@ -91,12 +91,12 @@
    "metadata": {},
    "source": [
     "### Berechnung der Ausgangsspannung:\n",
-    "**U_out = (DAC_Wert / 4095) × 10.7V**\n",
+    "**U_out = (DAC_Wert / 4095) × 10.5V**\n",
     "\n",
     "Beispiele:\n",
     "- DAC-Wert 0 → 0V\n",
-    "- DAC-Wert 2048 → 5.35V  \n",
-    "- DAC-Wert 4095 → 10.7V\n",
+    "- DAC-Wert 2048 → 5.25V  \n",
+    "- DAC-Wert 4095 → 10.5V\n",
     "\n",
     "---\n",
     "\n",
@@ -120,9 +120,16 @@
     "spi.mode = 0b00             # SPI Mode 0 (CPOL=0, CPHA=0)\n",
     "\n",
     "# === GPIO für Chip Select ===\n",
-    "gpio_handle = lgpio.gpiochip_open(0)  # Öffnet GPIO-Chip 0\n",
-    "lgpio.gpio_claim_output(gpio_handle, CS_PIN, lgpio.SET_PULL_UP)  # CS-Pin als Ausgang mit Pull-Up\n",
-    "lgpio.gpio_write(gpio_handle, CS_PIN, 1)  # CS initial auf HIGH (inaktiv)"
+    "gpio_handle = lgpio.gpiochip_open(0)  # GPIO Chip 0 öffnen\n",
+    "if gpio_handle < 0:\n",
+    "    raise Exception(\"Fehler beim Öffnen des GPIO Chips\")\n",
+    "\n",
+    "# CS Pin als Ausgang konfigurieren\n",
+    "ret = lgpio.gpio_claim_output(gpio_handle, CS_PIN, lgpio.SET_PULL_NONE)\n",
+    "if ret < 0:\n",
+    "    raise Exception(f\"Fehler beim Konfigurieren von GPIO Pin {CS_PIN}\")\n",
+    "\n",
+    "lgpio.gpio_write(gpio_handle, CS_PIN, 1)  # CS initial auf HIGH"
    ]
   },
   {
@@ -242,6 +249,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def cleanup_gpio():\n",
+    "    \"\"\"\n",
+    "    GPIO-Cleanup mit lgpio\n",
+    "    \"\"\"\n",
+    "    global gpio_handle\n",
+    "    \n",
+    "    try:\n",
+    "        # DAC auf 0V setzen\n",
+    "        write_dac(0)\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    try:\n",
+    "        # GPIO freigeben und Chip schließen\n",
+    "        if gpio_handle is not None:\n",
+    "            lgpio.gpio_free(gpio_handle, CS_PIN)  # Pin freigeben\n",
+    "            lgpio.gpiochip_close(gpio_handle)     # Chip schließen\n",
+    "            gpio_handle = None\n",
+    "        \n",
+    "        # SPI schließen\n",
+    "        spi.close()\n",
+    "        \n",
+    "        print(\"GPIO-Cleanup abgeschlossen (lgpio)\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Cleanup-Fehler: {e}\")\n",
+    "\n",
     "def main():\n",
     "    \"\"\"\n",
     "    Hauptfunktion für die Diodenkennlinienmessung\n",
@@ -299,10 +332,14 @@
     "            \n",
     "            # === DAC setzen ===\n",
     "            write_dac(dac_value)\n",
-    "            time.sleep(0.05)  # Einschwingzeit abwarten (wichtig!)\n",
+    "            time.sleep(0.1)  # Längere Einschwingzeit abwarten (erhöht von 0.05 auf 0.1)\n",
     "\n",
     "            # === Diodenspannung messen ===\n",
-    "            spannung_diode = hat.a_in_read(7)  # MCC118 Kanal 7\n",
+    "            try:\n",
+    "                spannung_diode = hat.a_in_read(7)  # MCC118 Kanal 7\n",
+    "            except Exception as e:\n",
+    "                print(f\"Fehler bei Messung Punkt {i+1}: {e}\")\n",
+    "                break  # Abbruch bei Fehler, um Daten bis hier zu plotten\n",
     "\n",
     "            # === Strom berechnen ===\n",
     "            strom = (spannung_dac - spannung_diode) / r_serie\n",
@@ -335,48 +372,51 @@
     "            print(f\"🔍 Schwellenspannung: ≈ {schwellenspannung:.3f}V\")\n",
     "\n",
     "        # === Diagramme erstellen ===\n",
-    "        print(\"📊 Erstelle Diagramme...\")\n",
-    "        \n",
-    "        plt.figure(figsize=(14, 6))\n",
+    "        if len(stroeme) > 0:  # Nur plotten, wenn Daten vorhanden\n",
+    "            print(\"📊 Erstelle Diagramme...\")\n",
+    "            \n",
+    "            plt.figure(figsize=(14, 6))\n",
     "\n",
-    "        # === Subplot 1: Klassische I-V Kennlinie ===\n",
-    "        plt.subplot(1, 2, 1)\n",
-    "        plt.plot(diodenspannungen, [i*1000 for i in stroeme], 'ro-', \n",
-    "                linewidth=2, markersize=4, label='Messdaten')\n",
-    "        plt.xlabel(\"Diodenspannung U_D [V]\", fontsize=11)\n",
-    "        plt.ylabel(\"Diodenstrom I_D [mA]\", fontsize=11) \n",
-    "        plt.title(\"Diodenkennlinie (I-V)\", fontsize=12, fontweight='bold')\n",
-    "        plt.grid(True, alpha=0.3)\n",
-    "        plt.legend()\n",
-    "        \n",
-    "        # Schwellenspannung markieren\n",
-    "        if schwellenspannung:\n",
-    "            plt.axvline(schwellenspannung, color='orange', linestyle='--', \n",
-    "                       label=f'Schwelle ≈ {schwellenspannung:.3f}V')\n",
+    "            # === Subplot 1: Klassische I-V Kennlinie ===\n",
+    "            plt.subplot(1, 2, 1)\n",
+    "            plt.plot(diodenspannungen, [i*1000 for i in stroeme], 'ro-', \n",
+    "                    linewidth=2, markersize=4, label='Messdaten')\n",
+    "            plt.xlabel(\"Diodenspannung U_D [V]\", fontsize=11)\n",
+    "            plt.ylabel(\"Diodenstrom I_D [mA]\", fontsize=11) \n",
+    "            plt.title(\"Diodenkennlinie (I-V)\", fontsize=12, fontweight='bold')\n",
+    "            plt.grid(True, alpha=0.3)\n",
+    "            plt.legend()\n",
+    "            \n",
+    "            # Schwellenspannung markieren\n",
+    "            if schwellenspannung:\n",
+    "                plt.axvline(schwellenspannung, color='orange', linestyle='--', \n",
+    "                           label=f'Schwelle ≈ {schwellenspannung:.3f}V')\n",
+    "                plt.legend()\n",
+    "\n",
+    "            # === Subplot 2: Eingangs- vs. Ausgangskennlinie ===\n",
+    "            plt.subplot(1, 2, 2)\n",
+    "            plt.plot(eingestellte_spannungen, [i*1000 for i in stroeme], 'bo-',\n",
+    "                    linewidth=2, markersize=4, label='I_D(U_DAC)')\n",
+    "            plt.xlabel(\"Eingangsspannung U_DAC [V]\", fontsize=11)\n",
+    "            plt.ylabel(\"Diodenstrom I_D [mA]\", fontsize=11)\n",
+    "            plt.title(\"Eingangsspannung vs. Strom\", fontsize=12, fontweight='bold')\n",
+    "            plt.xlim(0, spannung_max)\n",
+    "            plt.grid(True, alpha=0.3)\n",
     "            plt.legend()\n",
     "\n",
-    "        # === Subplot 2: Eingangs- vs. Ausgangskennlinie ===\n",
-    "        plt.subplot(1, 2, 2)\n",
-    "        plt.plot(eingestellte_spannungen, [i*1000 for i in stroeme], 'bo-',\n",
-    "                linewidth=2, markersize=4, label='I_D(U_DAC)')\n",
-    "        plt.xlabel(\"Eingangsspannung U_DAC [V]\", fontsize=11)\n",
-    "        plt.ylabel(\"Diodenstrom I_D [mA]\", fontsize=11)\n",
-    "        plt.title(\"Eingangsspannung vs. Strom\", fontsize=12, fontweight='bold')\n",
-    "        plt.xlim(0, spannung_max)\n",
-    "        plt.grid(True, alpha=0.3)\n",
-    "        plt.legend()\n",
+    "            plt.tight_layout()\n",
+    "            plt.show()\n",
     "\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "\n",
-    "        # === Zusammenfassung ausgeben ===\n",
-    "        max_strom = max(stroeme) * 1000\n",
-    "        max_spannung = max(diodenspannungen)\n",
-    "        print(f\"\\n📋 Messergebnisse:\")\n",
-    "        print(f\"   • Maximaler Strom: {max_strom:.2f} mA\")\n",
-    "        print(f\"   • Maximale Diodenspannung: {max_spannung:.3f} V\")\n",
-    "        print(f\"   • Serienwiderstand: {r_serie:.0f} Ω\")\n",
-    "        print(f\"   • Schwellenspannung: {schwellenspannung:.3f} V\" if schwellenspannung else \"   • Schwellenspannung: nicht erreicht\")\n",
+    "            # === Zusammenfassung ausgeben ===\n",
+    "            max_strom = max(stroeme) * 1000\n",
+    "            max_spannung = max(diodenspannungen)\n",
+    "            print(f\"\\n📋 Messergebnisse:\")\n",
+    "            print(f\"   • Maximaler Strom: {max_strom:.2f} mA\")\n",
+    "            print(f\"   • Maximale Diodenspannung: {max_spannung:.3f} V\")\n",
+    "            print(f\"   • Serienwiderstand: {r_serie:.0f} Ω\")\n",
+    "            print(f\"   • Schwellenspannung: {schwellenspannung:.3f} V\" if schwellenspannung else \"   • Schwellenspannung: nicht erreicht\")\n",
+    "        else:\n",
+    "            print(\"Keine Daten zum Plotten verfügbar.\")\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"\\n⚠️  Messung durch Benutzer abgebrochen.\")\n",
@@ -386,12 +426,7 @@
     "        write_dac(0)  # Sicherheit: DAC auf 0V\n",
     "    finally:\n",
     "        # === Cleanup (immer ausführen!) ===\n",
-    "        try:\n",
-    "            write_dac(0)    # DAC auf 0V setzen\n",
-    "            lgpio.gpiochip_close(gpio_handle)  # GPIO zurücksetzen\n",
-    "            print(\"🧹 Hardware-Cleanup abgeschlossen.\")\n",
-    "        except:\n",
-    "            pass\n",
+    "        cleanup_gpio()\n",
     "\n",
     "# === Messung starten ===\n",
     "if __name__ == \"__main__\":\n",
@@ -466,7 +501,11 @@
     "\n",
     "#### 4. **Temperaturabhängigkeit**\n",
     "- **Problem**: Kennlinie ändert sich mit Temperatur\n",
-    "- **Lösung**: Konstante Temperatur, Temperaturkompensation"
+    "- **Lösung**: Konstante Temperatur, Temperaturkompensation\n",
+    "\n",
+    "#### 5. **MCC118-Fehler bei vielen Messungen**\n",
+    "- **Problem**: \"Incorrect response\" nach mehreren a_in_read() Aufrufen\n",
+    "- **Lösung**: Firmware des MCC118 aktualisieren. Verwenden Sie den Befehl: `mcc118_firmware_update <adresse> <firmware_datei>`. Die Firmware-Datei finden Sie im DAQ HAT Repository oder auf der MCC-Website."
    ]
   },
   {
