--- a/src/Test/Filterkennlinie.ipynb
+++ b/src/Test/Filterkennlinie.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "import time                     # Für Wartezeiten\n",
     "import spidev                   # SPI-Kommunikation mit AD9833\n",
-    "import RPi.GPIO as GPIO         # GPIO-Steuerung für Raspberry Pi\n",
+    "import lgpio                    # GPIO-Steuerung für Raspberry Pi\n",
     "import matplotlib.pyplot as plt # Diagramme erstellen\n",
     "import numpy as np             # Numerische Berechnungen\n",
     "\n",
@@ -112,15 +112,16 @@
     "    Initialisiert GPIO und SPI für die Kommunikation mit dem AD9833\n",
     "    \n",
     "    Ablauf:\n",
-    "    1. GPIO konfigurieren (BCM-Nummerierung)\n",
+    "    1. GPIO konfigurieren\n",
     "    2. FSYNC Pin als Ausgang definieren\n",
     "    3. SPI-Schnittstelle öffnen und konfigurieren\n",
     "    4. AD9833 zurücksetzen\n",
     "    \"\"\"\n",
-    "    # GPIO Modus setzen (BCM = Broadcom Pin-Nummerierung)\n",
-    "    GPIO.setmode(GPIO.BCM)\n",
-    "    GPIO.setup(FSYNC_PIN, GPIO.OUT)\n",
-    "    GPIO.output(FSYNC_PIN, GPIO.HIGH)  # FSYNC initial auf HIGH\n",
+    "    # GPIO initialisieren\n",
+    "    global gpio_handle\n",
+    "    gpio_handle = lgpio.gpiochip_open(0)  # Öffnet GPIO-Chip 0\n",
+    "    lgpio.gpio_claim_output(gpio_handle, FSYNC_PIN, lgpio.SET_PULL_UP)  # FSYNC als Ausgang mit Pull-Up\n",
+    "    lgpio.gpio_write(gpio_handle, FSYNC_PIN, 1)  # FSYNC initial auf HIGH\n",
     "\n",
     "    # SPI-Schnittstelle konfigurieren\n",
     "    global spi\n",
@@ -170,9 +171,9 @@
     "    2. 16-Bit Daten in 2 Bytes aufteilen und senden\n",
     "    3. FSYNC auf HIGH (Übertragung beendet)\n",
     "    \"\"\"\n",
-    "    GPIO.output(FSYNC_PIN, GPIO.LOW)   # Übertragung starten\n",
-    "    spi.xfer2([data >> 8, data & 0xFF])  # High-Byte, dann Low-Byte\n",
-    "    GPIO.output(FSYNC_PIN, GPIO.HIGH)  # Übertragung beenden"
+    "    lgpio.gpio_write(gpio_handle, FSYNC_PIN, 0)   # Übertragung starten\n",
+    "    spi.xfer2([data >> 8, data & 0xFF])           # High-Byte, dann Low-Byte\n",
+    "    lgpio.gpio_write(gpio_handle, FSYNC_PIN, 1)   # Übertragung beenden"
    ]
   },
   {
@@ -226,7 +227,7 @@
     "\n",
     "## Schritt 5: Messung durchführen\n",
     "\n",
-    "### Hauptmessschleife\n",
+    ### Hauptmessschleife\n",
     "Hier führen wir die eigentliche Filtermessung durch:"
    ]
   },
@@ -235,16 +236,7 @@
    "execution_count": null,
    "id": "024b3f63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Filterkennlinie Messung ===\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main():\n",
     "    \"\"\"\n",
@@ -330,7 +322,7 @@
     "        try:\n",
     "            write_ad9833(RESET)  # Generator stoppen\n",
     "            spi.close()          # SPI schließen\n",
-    "            GPIO.cleanup()       # GPIO zurücksetzen\n",
+    "            lgpio.gpiochip_close(gpio_handle)  # GPIO zurücksetzen\n",
     "            print(\"🧹 Hardware-Cleanup abgeschlossen.\")\n",
     "        except:\n",
     "            pass\n",
