Formatierung und kleinere Anpassungen in Filterkennlinie.ipynb: Füge Leerzeile hinzu, korrigiere Kommentare und stelle sicher, dass die Markdown-Syntax korrekt ist.

--- a/src/Test/Filterkennlinie.ipynb
+++ b/src/Test/Filterkennlinie.ipynb
@@ -1,3 +1,4 @@
+
 {
  "cells": [
   {
@@ -40,7 +41,7 @@
     "import spidev                   # SPI-Kommunikation mit AD9833\n",
     "import lgpio                    # GPIO-Steuerung für Raspberry Pi\n",
     "import matplotlib.pyplot as plt # Diagramme erstellen\n",
-    "import numpy as np             # Numerische Berechnungen\n",
+    "import numpy as np              # Numerische Berechnungen\n",
     "\n",
     "from daqhats import mcc118, HatIDs           # MCC118 Hardware-Bibliothek\n",
     "from daqhats_utils import select_hat_device  # Device-Auswahl"
@@ -227,7 +228,7 @@
     "\n",
     "## Schritt 5: Messung durchführen\n",
     "\n",
-    ### Hauptmessschleife\n",
+    "### Hauptmessschleife\n",
     "Hier führen wir die eigentliche Filtermessung durch:"
    ]
   },
