Refactor Diodenkennlinie and Filterkennlinie notebooks to improve markdown formatting and update kernel specifications
- Removed unnecessary markdown separators and improved readability in both notebooks.
- Updated kernel display name to "Python 3 (ipykernel)" and adjusted version to "3.11.2".
- Enhanced structure of markdown cells for better organization and clarity.

--- a/src/Test/Diodenkennlinie.ipynb
+++ b/src/Test/Diodenkennlinie.ipynb
@@ -30,10 +30,14 @@
     "- **V**: Diodenspannung\n",
     "- **n**: Idealitätsfaktor (1-2)\n",
     "- **k**: Boltzmann-Konstante\n",
-    "- **T**: absolute Temperatur\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- **T**: absolute Temperatur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7bdab0-876e-4859-94d5-25e4325838ea",
+   "metadata": {},
+   "source": [
     "## Schritt 1: Bibliotheken importieren\n",
     "\n",
     "Wir benötigen verschiedene Python-Bibliotheken für die Hardware-Steuerung und Datenanalyse:"
@@ -96,10 +100,14 @@
     "Beispiele:\n",
     "- DAC-Wert 0 → 0V\n",
     "- DAC-Wert 2048 → 5.25V  \n",
-    "- DAC-Wert 4095 → 10.5V\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- DAC-Wert 4095 → 10.5V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "920d2cd3-bce9-4a76-ba4f-055bde9e5c1b",
+   "metadata": {},
+   "source": [
     "## Schritt 3: SPI-Kommunikation einrichten\n",
     "\n",
     "### SPI-Konfiguration\n",
@@ -140,10 +148,14 @@
     "### SPI-Modi Erklärung:\n",
     "- **Mode 0**: CPOL=0, CPHA=0 (Clock LOW, Daten bei steigender Flanke)\n",
     "- **CPOL**: Clock-Polarität (0=LOW, 1=HIGH im Ruhezustand)\n",
-    "- **CPHA**: Clock-Phase (0=erste Flanke, 1=zweite Flanke)\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- **CPHA**: Clock-Phase (0=erste Flanke, 1=zweite Flanke)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96e8122d-467b-45e3-847c-dfb9593e1ca8",
+   "metadata": {},
+   "source": [
     "## Schritt 4: DAC-Steuerfunktion\n",
     "\n",
     "### DAC-Datenformat\n",
@@ -202,50 +214,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af0f30c1",
+   "id": "c74edb77-cfed-428e-8fb2-0dcff2fbf0d4",
    "metadata": {},
    "source": [
-    "### Warum Buffered Mode?\n",
-    "- **Buffered**: Höhere Strombelastbarkeit, stabile Spannung\n",
-    "- **Unbuffered**: Direkter Ausgang, kann bei Last schwanken\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Schritt 5: Schaltungsanalyse\n",
-    "\n",
-    "### Messschaltung verstehen\n",
-    "Unsere Schaltung besteht aus:\n",
-    "\n",
-    "```\n",
-    "DAC → [R_serie] → [Diode] → GND\n",
-    "                     ↑\n",
-    "                  MCC118 (Spannungsmessung)\n",
-    "```\n",
-    "\n",
-    "### Stromberechnung mit Ohmschen Gesetz:\n",
-    "\n",
-    "**U_DAC = U_Diode + U_Widerstand**\n",
-    "\n",
-    "**U_Widerstand = I × R_serie**\n",
-    "\n",
-    "**Daher: I = (U_DAC - U_Diode) / R_serie**\n",
-    "\n",
-    "### Warum brauchen wir den Serienwiderstand?\n",
-    "1. **Strombegrenzung**: Schutz der Diode vor zu hohem Strom\n",
-    "2. **Messbarkeit**: Ermöglicht indirekte Strommessung\n",
-    "3. **Stabilität**: Verhindert Schwingungen im steilen Kennlinienbereich\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Schritt 6: Hauptmessung durchführen\n",
-    "\n",
-    "### Messablauf programmieren\n"
+    "## Schritt 5: Hauptmessung durchführen\n",
+    "### Messablauf programmieren"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e35625a5",
+   "id": "ac812a2a-a7cb-42d0-86b4-7013dba44e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,199 +411,11 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5dcadc3c",
-   "metadata": {},
-   "source": [
-    "## Schritt 7: Physikalische Interpretation\n",
-    "\n",
-    "### Die Diodenkennlinie verstehen\n",
-    "\n",
-    "#### Charakteristische Bereiche:\n",
-    "\n",
-    "1. **Sperrbereich (V < 0)**:\n",
-    "   - Diode ist gesperrt\n",
-    "   - Nur minimaler Sperrstrom fließt (nA bis μA)\n",
-    "   - Strom praktisch konstant\n",
-    "\n",
-    "2. **Schwellenbereich (0 < V < V_th)**:\n",
-    "   - Diode beginnt zu leiten\n",
-    "   - Exponentieller Stromanstieg\n",
-    "   - Schwellenspannung V_th ≈ 0.7V (Silizium)\n",
-    "\n",
-    "3. **Durchlassbereich (V > V_th)**:\n",
-    "   - Diode leitet gut\n",
-    "   - Starker Stromanstieg bei kleinen Spannungsänderungen\n",
-    "   - Praktisch konstante Spannung bei steigendem Strom\n",
-    "\n",
-    "#### Materialabhängige Schwellenspannungen:\n",
-    "- **Silizium (Si)**: V_th ≈ 0.7V\n",
-    "- **Germanium (Ge)**: V_th ≈ 0.3V  \n",
-    "- **LED (verschiedene Farben)**: V_th ≈ 1.8V - 3.5V\n",
-    "- **Schottky-Diode**: V_th ≈ 0.3V - 0.5V\n",
-    "\n",
-    "### Mathematische Modellierung\n",
-    "\n",
-    "#### Shockley-Gleichung (vereinfacht):\n",
-    "Für V > 0.1V kann die Gleichung vereinfacht werden zu:\n",
-    "\n",
-    "**I ≈ I_s × e^(V/V_T)**\n",
-    "\n",
-    "Dabei ist:\n",
-    "- **V_T = kT/q**: Temperaturspannung (≈ 26mV bei Raumtemperatur)\n",
-    "- **I_s**: Sättigungsstrom (materialabhängig)\n",
-    "\n",
-    "#### Logarithmische Darstellung:\n",
-    "**ln(I) = ln(I_s) + V/V_T**\n",
-    "\n",
-    "Dies erklärt die **exponentiell ansteigende Kennlinie**.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Schritt 8: Fehlerquellen und Verbesserungen\n",
-    "\n",
-    "### Häufige Probleme:\n",
-    "\n",
-    "#### 1. **Selbsterwärmung der Diode**\n",
-    "- **Problem**: Hoher Strom → Erwärmung → Kennlinie verschiebt sich\n",
-    "- **Lösung**: Kurze Messpulse, Wartezeiten einhalten\n",
-    "\n",
-    "#### 2. **Leitungswiderstände**\n",
-    "- **Problem**: Spannungsabfall an Kabeln verfälscht Messung\n",
-    "- **Lösung**: Kurze, dicke Leitungen verwenden\n",
-    "\n",
-    "#### 3. **ADC-Auflösung**\n",
-    "- **Problem**: Kleine Spannungen werden ungenau gemessen\n",
-    "- **Lösung**: Höhere ADC-Auflösung, Verstärker verwenden\n",
-    "\n",
-    "#### 4. **Temperaturabhängigkeit**\n",
-    "- **Problem**: Kennlinie ändert sich mit Temperatur\n",
-    "- **Lösung**: Konstante Temperatur, Temperaturkompensation\n",
-    "\n",
-    "#### 5. **MCC118-Fehler bei vielen Messungen**\n",
-    "- **Problem**: \"Incorrect response\" nach mehreren a_in_read() Aufrufen\n",
-    "- **Lösung**: Firmware des MCC118 aktualisieren. Verwenden Sie den Befehl: `mcc118_firmware_update <adresse> <firmware_datei>`. Die Firmware-Datei finden Sie im DAQ HAT Repository oder auf der MCC-Website."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1eb40c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Beispiel für verbesserte Messung mit Mittelwertbildung\n",
-    "def improved_measurement(hat, channel, num_samples=10):\n",
-    "    \"\"\"\n",
-    "    Verbesserte Spannungsmessung mit Mittelwertbildung\n",
-    "    \"\"\"\n",
-    "    samples = []\n",
-    "    for _ in range(num_samples):\n",
-    "        samples.append(hat.a_in_read(channel))\n",
-    "        time.sleep(0.001)  # Kurze Pause zwischen Messungen\n",
-    "    \n",
-    "    return sum(samples) / len(samples)  # Mittelwert"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7580d092",
-   "metadata": {},
-   "source": [
-    "## Schritt 9: Erweiterte Auswertung\n",
-    "\n",
-    "### Kennlinienparameter extrahieren"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6ef84b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def analyze_diode_curve(voltages, currents):\n",
-    "    \"\"\"\n",
-    "    Erweiterte Analyse der Diodenkennlinie\n",
-    "    \"\"\"\n",
-    "    import numpy as np\n",
-    "    \n",
-    "    # Schwellenspannung bestimmen (verschiedene Kriterien)\n",
-    "    thresholds = {\n",
-    "        \"1mA\": find_threshold(voltages, currents, 0.001),\n",
-    "        \"10mA\": find_threshold(voltages, currents, 0.010),\n",
-    "        \"1% Max\": find_threshold(voltages, currents, max(currents) * 0.01)\n",
-    "    }\n",
-    "    \n",
-    "    # Differentieller Widerstand im Arbeitspunkt\n",
-    "    r_diff = calculate_differential_resistance(voltages, currents)\n",
-    "    \n",
-    "    # Idealitätsfaktor schätzen (aus Steigung)\n",
-    "    ideality_factor = estimate_ideality_factor(voltages, currents)\n",
-    "    \n",
-    "    return {\n",
-    "        \"thresholds\": thresholds,\n",
-    "        \"r_diff\": r_diff,\n",
-    "        \"ideality\": ideality_factor\n",
-    "    }\n",
-    "\n",
-    "def find_threshold(voltages, currents, threshold_current):\n",
-    "    \"\"\"Findet Schwellenspannung für gegebenen Strom\"\"\"\n",
-    "    for v, i in zip(voltages, currents):\n",
-    "        if i >= threshold_current:\n",
-    "            return v\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7be2cd03",
-   "metadata": {},
-   "source": [
-    "## Schritt 10: Praktische Tipps\n",
-    "\n",
-    "### Experimenteller Aufbau:\n",
-    "1. **Kurze Verbindungen**: Minimiert Störungen und Widerstände\n",
-    "2. **Abschirmung**: Reduziert Rauschen von externen Quellen\n",
-    "3. **Temperaturkontrolle**: Konstante Umgebungstemperatur\n",
-    "4. **Kalibrierung**: Multimeter als Referenz verwenden\n",
-    "\n",
-    "### Sicherheitshinweise:\n",
-    "- **Maximale Spannung**: Nicht über Sperrspannung der Diode gehen\n",
-    "- **Maximaler Strom**: Thermal Runaway vermeiden\n",
-    "- **ESD-Schutz**: Antistatische Vorsichtsmaßnahmen\n",
-    "\n",
-    "### Typische Messwerte:\n",
-    "- **1N4007 (Si-Diode)**: V_th ≈ 0.7V, I_max = 1A\n",
-    "- **1N4148 (Schaltdiode)**: V_th ≈ 0.65V, I_max = 200mA  \n",
-    "- **LED (rot)**: V_th ≈ 1.8V, I_nom = 20mA\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Zusammenfassung\n",
-    "\n",
-    "\n",
-    "1. **Hardware-Steuerung**: DAC über SPI programmieren\n",
-    "2. **Messtechnik**: Indirekte Strommessung über Spannungsabfall\n",
-    "3. **Datenanalyse**: Kennlinien erstellen und interpretieren\n",
-    "4. **Physik**: Halbleiterverhalten verstehen\n",
-    "\n",
-    "### Weiterführende Experimente:\n",
-    "- **Temperaturabhängigkeit**: Kennlinie bei verschiedenen Temperaturen\n",
-    "- **Verschiedene Dioden**: Vergleich unterschiedlicher Diodentypen\n",
-    "- **AC-Analyse**: Kleinsignalverhalten untersuchen\n",
-    "- **Rückwärtskennlinie**: Sperrverhalten charakterisieren\n",
-    "\n",
-    "Die Diodenkennlinie ist ein fundamentales Experiment in der Elektronik und bildet die Grundlage für das Verständnis komplexerer Halbleiterbauelemente wie Transistoren und integrierte Schaltungen.\n",
-    "        "
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -638,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
