--- a/src/Test/Filterkennlinie.ipynb
+++ b/src/Test/Filterkennlinie.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -22,10 +21,14 @@
     "### Hardware-Setup\n",
     "- **AD9833**: DDS (Direct Digital Synthesis) Signalgenerator\n",
     "- **MCC118**: 8-Kanal Analog-Digital-Wandler\n",
-    "- **Filter**: Das zu messende Filter (zwischen Generator und ADC)\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- **Filter**: Das zu messende Filter (zwischen Generator und ADC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1b28234-7e97-49f8-a603-a1f2ef680d4f",
+   "metadata": {},
+   "source": [
     "## Schritt 1: Bibliotheken importieren\n",
     "Wir benötigen verschiedene Python-Bibliotheken für die Hardware-Steuerung und Datenvisualisierung:"
    ]
@@ -91,10 +94,14 @@
     "- **FREQ0_REG**: Hier wird die gewünschte Frequenz gespeichert\n",
     "- **CONTROL_REG**: Steuert Wellenform und Betriebsmodus\n",
     "- **SINE_WAVE**: Aktiviert die Sinuswellen-Ausgabe\n",
-    "- **RESET**: Setzt den AD9833 zurück\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- **RESET**: Setzt den AD9833 zurück"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7e89e0-387d-40c8-99be-0bea9f449b02",
+   "metadata": {},
+   "source": [
     "## Schritt 3: Hardware-Initialisierung\n",
     "\n",
     "### GPIO und SPI Setup\n",
@@ -143,10 +150,14 @@
    "source": [
     "## Warum SPI Mode 2?\n",
     "- **CPOL=1**: Clock-Polarität invertiert (Clock ist normalerweise HIGH)\n",
-    "- **CPHA=0**: Daten werden bei der steigenden Flanke gelesen\n",
-    "\n",
-    "---\n",
-    "\n",
+    "- **CPHA=0**: Daten werden bei der steigenden Flanke gelesen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697328ed-1b2a-4d4f-96b9-3fd0d6fe401a",
+   "metadata": {},
+   "source": [
     "## Schritt 4: AD9833 Kommunikationsfunktionen\n",
     "\n",
     "### SPI-Datenübertragung\n",
@@ -222,10 +233,14 @@
    "metadata": {},
    "source": [
     "### Warum zwei 14-Bit Pakete?\n",
-    "Der AD9833 hat nur 16-Bit Register, aber benötigt 28-Bit für die Frequenz. Daher wird das Frequenzwort in zwei Teile aufgeteilt.\n",
-    "\n",
-    "---\n",
-    "\n",
+    "Der AD9833 hat nur 16-Bit Register, aber benötigt 28-Bit für die Frequenz. Daher wird das Frequenzwort in zwei Teile aufgeteilt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db94ffdb-ef14-4967-8bda-18a3ca62766c",
+   "metadata": {},
+   "source": [
     "## Schritt 5: Messung durchführen\n",
     "\n",
     "### Hauptmessschleife\n",
@@ -332,63 +347,11 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9c09eb1",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## Schritt 6: Ergebnisse verstehen\n",
-    "\n",
-    "### Das Bode-Diagramm interpretieren\n",
-    "\n",
-    "#### Typische Filtertypen:\n",
-    "1. **Tiefpass-Filter**: \n",
-    "   - Niedrige Frequenzen werden durchgelassen\n",
-    "   - Hohe Frequenzen werden gedämpft\n",
-    "   - Kennlinie fällt bei hohen Frequenzen ab\n",
-    "\n",
-    "2. **Hochpass-Filter**:\n",
-    "   - Hohe Frequenzen werden durchgelassen  \n",
-    "   - Niedrige Frequenzen werden gedämpft\n",
-    "   - Kennlinie steigt bei hohen Frequenzen an\n",
-    "\n",
-    "3. **Bandpass-Filter**:\n",
-    "   - Nur ein bestimmter Frequenzbereich wird durchgelassen\n",
-    "   - Kennlinie hat ein Maximum bei der Resonanzfrequenz\n",
-    "\n",
-    "#### Wichtige Kenngrößen:\n",
-    "- **Grenzfrequenz (-3dB)**: Frequenz bei der die Amplitude um 3dB abgefallen ist\n",
-    "- **Steilheit**: Wie schnell die Dämpfung zunimmt (dB/Dekade)\n",
-    "- **Passband**: Frequenzbereich mit geringer Dämpfung\n",
-    "- **Sperrband**: Frequenzbereich mit starker Dämpfung\n",
-    "\n",
-    "#### Mathematischer Hintergrund:\n",
-    "- **dB-Skala**: dB = 20 × log₁₀(U_out/U_in)\n",
-    "- **-3dB**: Entspricht 70.7% der ursprünglichen Amplitude\n",
-    "- **-20dB**: Entspricht 10% der ursprünglichen Amplitude\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Tipps für die Praxis\n",
-    "\n",
-    "### Messgenauigkeit verbessern:\n",
-    "- **Einschwingzeit**: Immer genug Zeit warten nach Frequenzänderung\n",
-    "- **Messpunkte**: Mehr Punkte für bessere Auflösung\n",
-    "- **Frequenzbereich**: Logarithmische Verteilung für gleichmäßige Auflösung\n",
-    "\n",
-    "### Häufige Probleme:\n",
-    "- **Rauschen**: Mehrfachmessung und Mittelwertbildung\n",
-    "- **Übersteuering**: Eingangspegel prüfen\n",
-    "- **Schwingungen**: Abschirmung und kurze Leitungen verwenden"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -402,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
